5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1573_1333.log
== SUBMITION (2019-03-11 15:45:25) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.183502
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:37) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.191619
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:40) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:41) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.193844
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:08) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.15125
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = (30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:47:34) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.145964
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
